[workspace]
members = [
    "orbit",
    "orbit-analyzer",
    "orbitkit",
    "orbiton",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Orbit Framework Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orbit"
readme = "README.md"

[workspace.dependencies]
# Common dependencies to ensure version consistency
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
wasm-bindgen = "0.2"
