[workspace]
resolver = "2"
members = [
    "orbit",
    "orbit-analyzer",
    "orbitkit",
    "orbiton",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Orbit Framework Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orbit"
readme = "README.md"

[workspace.dependencies]
# Common dependencies to ensure version consistency
log = "0.4"
thiserror = "2.0.12"  # Updated to new major version to fix proc-macro issues
serde = { version = "=1.0.190", features = ["derive"] }  # Updated to match serde_yaml requirements
serde_json = "=1.0.107"  # Pinning exact serde_json version
tokio = { version = "1", features = ["full"] }
wasm-bindgen = "0.2"
